force-app/src/objects/c2g__codaPaymentMediaSummary__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including payment values summarized by account and the corresponding bank account details.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Media Summaries</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountNumber__c</fullName>
        <label>Destination Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountReference__c</fullName>
        <label>Destination Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCity__c</fullName>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankIbanNumber__c</fullName>
        <label>Bank IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankSortCode__c</fullName>
        <label>Destination Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BankSwiftNumber__c</fullName>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankZipPostalCode__c</fullName>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BillingZipPostCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValueTotal__c</fullName>
        <label>Discount Value Total</label>
        <summarizedField>c2g__codaPaymentMediaDetail__c.c2g__Discount__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentMediaDetail__c.c2g__PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GrossValueTotal__c</fullName>
        <label>Gross Value Total</label>
        <summarizedField>c2g__codaPaymentMediaDetail__c.c2g__OriginalValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentMediaDetail__c.c2g__PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Summaries (Company)</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayeeName__c</fullName>
        <label>Destination Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentControlCurrency__c</fullName>
        <label>Payment Control Currency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Media Control</label>
        <referenceTo>c2g__codaPaymentMediaControl__c</referenceTo>
        <relationshipLabel>Payment Media Summaries</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentReference__c</fullName>
        <label>Payment Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueTotal__c</fullName>
        <label>Payment Value Total</label>
        <summarizedField>c2g__codaPaymentMediaDetail__c.c2g__PaymentValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentMediaDetail__c.c2g__PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankAccountNumber__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankCity__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankIBANNumber__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankIBANNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank IBAN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankName__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankSortCode__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankSortCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankStreet__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBankZipPostalCode__c</fullName>
        <formula>c2g__Account__r.c2g__CODABankZipPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Bank Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBillingAddress__c</fullName>
        <formula>c2g__Account__r.BillingStreet</formula>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountBillingState__c</fullName>
        <formula>c2g__BankStateProvince__c &amp;  c2g__BillingZipPostCode__c</formula>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountFax__c</fullName>
        <formula>c2g__Account__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountInvoiceEmail__c</fullName>
        <formula>c2g__Account__r.c2g__CODAInvoiceEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Invoice Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountName__c</fullName>
        <formula>c2g__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountParticulars__c</fullName>
        <formula>c2g__Account__r.ffbf__AccountParticulars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Particulars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankBIC__c</fullName>
        <formula>c2g__Account__r.ffbf__BankBIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank BIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationBankAccountNumberFormula__c</fullName>
        <formula>Value(c2g__BankAccountNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Bank Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCode__c</fullName>
        <formula>c2g__Account__r.ffbf__PaymentCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCountryISO__c</fullName>
        <formula>c2g__Account__r.ffbf__PaymentCountryISO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Country ISO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentId__c</fullName>
        <description>New field which has the payment Id to belong the payment media summary record</description>
        <formula>c2g__PaymentMediaControl__r.c2g__Payment__r.Id</formula>
        <label>Payment Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentPriority__c</fullName>
        <formula>TEXT(c2g__Account__r.ffbf__PaymentPriority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentRoutingMethod__c</fullName>
        <formula>TEXT(c2g__Account__r.ffbf__PaymentRoutingMethod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Routing Method</label>
        <type>Text</type>
    </fields>
    <label>Payment Media Summary</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaPaymentMediaSummary</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaPaymentMediaSummary</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__GrossValue__c</columns>
        <columns>c2g__DiscountValue__c</columns>
        <columns>c2g__PaymentValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>